--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -15,7 +15,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/logInEmailLayout"
             style="@style/fullWidthTextInputLayout"
-            android:hint="@string/email">
+            android:hint="@string/email"
+            android:inputType="textEmailAddress">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
