Add new extension functions

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -72,7 +72,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSignUp"
             style="@style/fullWidthButton"
-            android:text="@string/log_in" />
+            android:text="@string/sign_up" />
 
     </LinearLayout>
 
