--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/app_padding"
-    tools:context=".authactivity.signup.SignUpFragment">
+    tools:context=".feature.signup.SignUpFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
