--- a/app/src/main/res/layout/fragment_personal_information.xml
+++ b/app/src/main/res/layout/fragment_personal_information.xml
@@ -38,14 +38,10 @@
                 android:id="@+id/cityLayout"
                 style="@style/fullWidthTextInputLayout"
                 android:hint="@string/city"
-                android:inputType="none"
                 app:endIconDrawable="@drawable/ic_gps"
-                app:endIconMode="custom"
-                app:helperText="">
+                app:endIconMode="custom">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,12 +52,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/studiesLayout"
                 style="@style/fullWidthTextInputLayout"
-                android:hint="@string/studies"
-                android:inputType="text">
+                android:hint="@string/studies">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,13 +64,12 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/occupationLayout"
-                style="@style/fullWidthTextInputLayout"
-                android:hint="@string/occupation"
-                android:inputType="text">
+                style="@style/full_width_exposed_dropdown_menu"
+                android:hint="@string/occupation">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <AutoCompleteTextView
+                    style="@style/edit_text"
+                    android:inputType="none" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,13 +79,12 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/marriageLayout"
-                style="@style/fullWidthTextInputLayout"
-                android:hint="@string/marriage"
-                android:inputType="text">
+                style="@style/full_width_exposed_dropdown_menu"
+                android:hint="@string/marriage">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <AutoCompleteTextView
+                    style="@style/edit_text"
+                    android:inputType="none" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,12 +95,11 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/childrenLayout"
                 style="@style/fullWidthTextInputLayout"
-                android:hint="@string/children"
-                android:inputType="number">
+                android:hint="@string/children">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    style="@style/edit_text"
+                    android:inputType="number" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -118,7 +108,7 @@
             android:id="@+id/btnPersonalInformationPrevious"
             style="@style/icon_button"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="@dimen/user_info_button"
             app:icon="@drawable/ic_arrow_previous"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -127,7 +117,7 @@
             android:id="@+id/btnPersonalInformationNext"
             style="@style/icon_button"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="@dimen/user_info_button"
             app:icon="@drawable/ic_arrow_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
