--- a/app/src/main/res/layout/fragment_basic_user_info.xml
+++ b/app/src/main/res/layout/fragment_basic_user_info.xml
@@ -37,12 +37,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/usernameLayout"
                 style="@style/fullWidthTextInputLayout"
-                android:hint="@string/username"
-                android:inputType="text">
+                android:hint="@string/username">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,12 +50,10 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/genderLayout"
                 style="@style/full_width_exposed_dropdown_menu"
-                android:hint="@string/gender"
-                android:inputType="none">
+                android:hint="@string/gender">
 
                 <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/edit_text"
                     android:inputType="none" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -71,13 +66,12 @@
                 android:id="@+id/birthDateLayout"
                 style="@style/fullWidthTextInputLayout"
                 android:hint="@string/birth_date"
-                android:inputType="none"
                 app:endIconDrawable="@drawable/ic_calendar"
                 app:endIconMode="custom">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    style="@style/edit_text"
+                    android:inputType="none" />
 
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -86,7 +80,7 @@
             android:id="@+id/btnBasicInformationPrevious"
             style="@style/icon_button"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="@dimen/user_info_button"
             app:icon="@drawable/ic_arrow_previous"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -95,7 +89,8 @@
             android:id="@+id/btnBasicInformationNext"
             style="@style/icon_button"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="@dimen/user_info_button"
+            android:enabled="false"
             app:icon="@drawable/ic_arrow_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
