--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -15,12 +15,11 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/logInEmailLayout"
             style="@style/fullWidthTextInputLayout"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress">
+            android:hint="@string/email">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                style="@style/edit_text"
+                android:inputType="textEmailAddress" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -34,9 +33,7 @@
             android:hint="@string/password"
             app:endIconMode="password_toggle">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
