--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -18,9 +18,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -34,9 +32,7 @@
             android:hint="@string/password"
             app:endIconMode="password_toggle">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,9 +46,7 @@
             android:hint="@string/repeat_password"
             app:endIconMode="password_toggle">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
