--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -4,42 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/app_padding"
     tools:context=".feature.userinfo.fragments.WelcomeFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/full_color_constraint_layout">
 
         <LinearLayout
             android:id="@+id/welcomeTitleLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="@dimen/user_info_title_margin"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/welcome"
-                android:textColor="@color/primaryColor"
-                android:textSize="28sp" />
+                style="@style/user_info_title"
+                android:layout_marginTop="0dp"
+                android:text="@string/welcome" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textColor="@color/primaryColor"
-                android:textSize="32sp"
-                android:textStyle="bold" />
+                style="@style/app_title"
+                android:layout_marginTop="0dp" />
         </LinearLayout>
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            style="@style/round_linear_layout"
+            android:layout_marginTop="190dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeTitleLayout">
+
+            <TextView
+                style="@style/welcome_text"
+                android:text="@string/next_screens_information" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="@dimen/space" />
+
+            <TextView
+                style="@style/welcome_text"
+                android:text="@string/private_information" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="@dimen/space" />
+
+            <TextView
+                style="@style/welcome_text"
+                android:text="@string/required_fields" />
+
+        </LinearLayout>
+
+        <!--<TextView
             android:id="@+id/txtFillInfo"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
@@ -50,16 +69,16 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcomeTitleLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/welcomeTitleLayout" />-->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnWelcomeNext"
             style="@style/icon_button"
-            android:layout_marginTop="64dp"
+            android:layout_marginBottom="@dimen/user_info_button"
             app:icon="@drawable/ic_arrow_next"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtFillInfo" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
