--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="app_padding">20dp</dimen>
     <dimen name="space">20dp</dimen>
     <dimen name="user_info_button">32dp</dimen>
+    <dimen name="user_info_title_margin">64dp</dimen>
+    <dimen name="user_info_title_size">28sp</dimen>
+    <dimen name="layout_corner_radius">24dp</dimen>
+    <dimen name="round_linear_layout_margin">150dp</dimen>
+    <dimen name="title">32sp</dimen>
+    <dimen name="welcome_text">14sp</dimen>
 </resources>
