--- a/app/src/main/res/layout/fragment_basic_user_info.xml
+++ b/app/src/main/res/layout/fragment_basic_user_info.xml
@@ -10,7 +10,7 @@
 
         <TextView
             android:id="@+id/basicUserInformationTitle"
-            style="@style/user_info_title"
+            style="@style/screen_title"
             android:text="@string/basic_information"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:id="@+id/btnBasicInformationPrevious"
             style="@style/icon_button"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="@dimen/user_info_button"
+            android:layout_marginBottom="@dimen/button_bottom_margin"
             app:icon="@drawable/ic_arrow_previous"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -78,7 +78,7 @@
             android:id="@+id/btnBasicInformationNext"
             style="@style/icon_button"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="@dimen/user_info_button"
+            android:layout_marginBottom="@dimen/button_bottom_margin"
             android:enabled="false"
             app:icon="@drawable/ic_arrow_next"
             app:layout_constraintBottom_toBottomOf="parent"
