--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -52,7 +52,7 @@
 
         <TextView
             android:id="@+id/txtMakeSignUp"
-            style="@style/AuthText"
+            style="@style/text_click"
             android:layout_marginStart="@dimen/app_padding"
             android:layout_marginEnd="@dimen/app_padding"
             android:layout_marginBottom="@dimen/button_bottom_margin"
