--- a/app/src/main/res/layout/dialog_create_contact_network.xml
+++ b/app/src/main/res/layout/dialog_create_contact_network.xml
@@ -34,10 +34,29 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/app_padding" />
 
-    <TextView
-        android:id="@+id/txtConfirmContactNetworkCreation"
-        style="@style/text_click"
-        android:gravity="center_horizontal|end"
-        android:text="@android:string/ok" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtCancelContactNetworkCreation"
+            style="@style/text_click"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|start"
+            android:text="@string/close"
+            android:textAllCaps="true"
+            android:textColor="@color/red" />
+
+        <TextView
+            android:id="@+id/txtConfirmContactNetworkCreation"
+            style="@style/text_click"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|end"
+            android:text="@android:string/ok" />
+
+    </LinearLayout>
 
 </LinearLayout>
