--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -122,4 +122,26 @@
         <item name="android:layout_marginTop">@dimen/round_linear_layout_margin</item>
         <item name="android:background">@drawable/linear_layout_corner</item>
     </style>
+
+    <style name="card_title">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal|start</item>
+        <item name="android:textSize">@dimen/card_title</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxWidth">@dimen/card_title_max_width</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="card_secondary_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center_horizontal|start</item>
+        <item name="android:textSize">@dimen/card_secondary_text</item>
+        <item name="android:textColor">@color/card_secondary_text</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
 </resources>
