Fix contact network ui.

--- a/app/src/main/res/layout/fragment_contact_networks.xml
+++ b/app/src/main/res/layout/fragment_contact_networks.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/app_padding_half"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".feature.contactnetworks.ContactNetworksFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contactNetworkList"
+            android:layout_width="match_parent"
+            android:layout_height="500dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnCreateContactNetwork"
