--- a/app/src/main/res/layout/contact_network_card.xml
+++ b/app/src/main/res/layout/contact_network_card.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,6 +13,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/contactNetworkBorder"
             android:layout_width="6dp"
             android:layout_height="match_parent"
             android:background="@color/primaryColor"
@@ -40,7 +42,7 @@
                     tools:text="#1234" />
 
                 <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/contantNetworkWithPassword"
+                    android:id="@+id/contactNetworkWithPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -56,29 +58,6 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/contactNetworkOwner"
-                    style="@style/card_secondary_text"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@android:color/black"
-                    tools:text="Created by AlbertPG" />
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/contantNetworkExpandIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/ic_expand" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="vertical">
-
-                <TextView
                     android:id="@+id/contactNetworkState"
                     style="@style/card_secondary_text"
                     android:layout_width="wrap_content"
@@ -88,8 +67,34 @@
                     android:textColor="@android:color/black"
                     tools:text="Invisible" />
 
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/contactNetworkExpandIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    app:srcCompat="@drawable/ic_expand" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/contactNetworkExpandable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    android:id="@+id/contactNetworkOwner"
+                    style="@style/card_secondary_text"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@android:color/black"
+                    tools:text="Created by AlbertPG" />
+
                 <LinearLayout
-                    android:id="@+id/contactNetworkExpandable"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -106,7 +111,7 @@
                         android:textSize="14sp" />
 
                     <com.google.android.material.imageview.ShapeableImageView
-                        android:id="@+id/contantNetworkConfiguration"
+                        android:id="@+id/contactNetworkConfiguration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
