--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -135,12 +135,16 @@
     </style>
 
     <style name="card_secondary_text">
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
         <item name="android:gravity">center_horizontal|start</item>
         <item name="android:textSize">@dimen/card_secondary_text</item>
         <item name="android:textColor">@color/card_secondary_text</item>
         <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
+
+    <style name="card_secondary_text_weight" parent="card_secondary_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
     </style>
 </resources>
