Add the logic for enable user addition.

--- a/app/src/main/res/layout/fragment_contact_network_settings.xml
+++ b/app/src/main/res/layout/fragment_contact_network_settings.xml
@@ -3,12 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/app_padding"
     tools:context=".feature.contactnetworksettings.ContactNetworkSettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            style="@style/section_title"
+            android:layout_marginBottom="@dimen/app_padding_half"
+            android:text="@string/visibility_configuration" />
+
+        <View style="@style/divider" />
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/swEnableUserAddition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enable_users_addition" />
+
+    </LinearLayout>
 
 </FrameLayout>
