--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="card_title">20sp</dimen>
     <dimen name="card_title_max_width">250dp</dimen>
     <dimen name="card_secondary_text">14sp</dimen>
+    <dimen name="section">18sp</dimen>
 </resources>
