--- a/app/src/main/res/layout/fragment_contact_network_settings.xml
+++ b/app/src/main/res/layout/fragment_contact_network_settings.xml
@@ -41,6 +41,33 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="@dimen/space_more" />
+
+        <TextView
+            style="@style/section_title"
+            android:layout_marginBottom="@dimen/app_padding_half"
+            android:text="@string/access_code" />
+
+        <View style="@style/divider" />
+
+        <TextView
+            android:id="@+id/txtAccessCode"
+            style="@style/access_code"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/app_padding"
+            android:layout_marginBottom="@dimen/app_padding_half"
+            android:visibility="gone"
+            tools:text="123456"
+            tools:visibility="visible" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnGenerateAccessCode"
+            style="@style/fullWidthButton"
+            android:layout_marginTop="@dimen/app_padding"
+            android:text="@string/access_code_generation" />
+
     </LinearLayout>
 
 </FrameLayout>
