--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,7 +4,7 @@
         android:id="@+id/contactNetworksFragment"
         android:enabled="true"
         android:icon="@drawable/ic_contact_network"
-        android:title="@string/contact_networks_fragment" />
+        android:title="@string/contact_networks_fragment_short" />
 
     <item
         android:id="@+id/searchFragment"
@@ -17,5 +17,11 @@
         android:enabled="true"
         android:icon="@drawable/ic_profile"
         android:title="@string/profile_bottom_fragments" />
+
+    <item
+        android:id="@+id/settingsFragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/settings_bottom_fragment" />
 
 </menu>
