--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/app_padding_half"
     tools:context=".feature.search.SearchFragment">
 
@@ -19,7 +19,9 @@
             app:endIconDrawable="@drawable/ic_search"
             app:endIconMode="custom">
 
-            <com.google.android.material.textfield.TextInputEditText style="@style/edit_text" />
+            <com.google.android.material.textfield.TextInputEditText
+                style="@style/edit_text"
+                android:imeOptions="actionSearch" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -27,10 +29,39 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/space" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contactNetworkSearchList"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/layoutNoContactNetworks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_not_found"
+                    app:tint="@color/primaryColor" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/no_contact_network_available"
+                    android:textColor="@color/primaryColor"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contactNetworkSearchList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
