--- a/app/src/main/res/drawable/linear_layout_corner.xml
+++ b/app/src/main/res/drawable/linear_layout_corner.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/login_round_layout_color" />
 
     <padding
         android:bottom="5dp"
