--- a/app/src/main/res/layout/fragment_contact_networks.xml
+++ b/app/src/main/res/layout/fragment_contact_networks.xml
@@ -54,8 +54,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnPositive"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/button"
                 android:layout_gravity="start|bottom"
                 android:layout_marginStart="@dimen/app_padding_half"
                 android:layout_marginBottom="@dimen/app_padding_half"
