--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#4caf50</color>
-    <color name="primaryLightColor">#80e27e</color>
-    <color name="primaryDarkColor">#087f23</color>
-    <color name="secondaryColor">#ffa726</color>
-    <color name="secondaryLightColor">#ffd95b</color>
-    <color name="secondaryDarkColor">#c77800</color>
-    <color name="primaryTextColor">#000000</color>
+    <color name="primaryColor">#8e24aa</color>
+    <color name="primaryLightColor">#c158dc</color>
+    <color name="primaryDarkColor">#5c007a</color>
+    <color name="secondaryColor">#00bfa5</color>
+    <color name="secondaryLightColor">#5df2d6</color>
+    <color name="secondaryDarkColor">#008e76</color>
+    <color name="primaryTextColor">#FFFFFF</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="red">#F44336</color>
     <color name="card_secondary_text">#8F555151</color>
@@ -16,5 +16,5 @@
     <color name="network_limit">#B4FF0000</color>
     <color name="network_overlimit">#B7B80000</color>
     <color name="network_positive_detected">#8F0040FF</color>
-    <color name="login_round_layout_color">@android:color/white</color>
+    <color name="login_round_layout_color">@android:color/black</color>
 </resources>
