--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorAccent">@color/primaryLightColor</item>
@@ -37,7 +37,7 @@
     <style name="button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
@@ -127,7 +127,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal|start</item>
         <item name="android:textSize">@dimen/card_title</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxWidth">@dimen/card_title_max_width</item>
